--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^11.6.0",
     "typescript": "4.9.4"
   }
 }
