--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.2.2",
     "keen-slider": "^6.8.5",
     "next": "13.1.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.0",
     "stripe": "^11.6.0",
     "typescript": "4.9.4"
   }
