--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "^13.1.2",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "axios": "^1.2.2",
+    "axios": "^1.3.2",
     "keen-slider": "^6.8.5",
     "next": "13.1.2",
     "phosphor-react": "^1.4.1",
@@ -22,6 +24,11 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "stripe": "^11.6.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
+    "eslint": "^8.33.0"
   }
 }
