--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.2",
     "keen-slider": "^6.8.5",
     "next": "13.1.2",
+    "nodemailer": "^6.9.1",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
